# wgpu_mandelbrot

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
src/: algcolor.rs  input_controller.rs  lib.rs  main.rs  shader.wgsl  wbuffer.rs  wpipeline.rs
