[package]
name = "wgpu_mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
image = "0.24.7"
rayon = "1.8.0"
clap = { version = "4.4.4", features = ["derive"] }
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
